some minor display changes, fixed ng-cloak on firefox

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -22,7 +22,7 @@
 .convert { cursor: pointer; cursor: hand; }
 .convert>span:hover {color: yellow;}
 .sweater {margin-bottom: 20px; font-size: 35px;}
-.title {text-align: center; padding-top: 170px;}
+.title {text-align: center; padding-top: 100px;}
 .main {width: 100%; margin: 0 auto; text-align: center;}
 body {font-family: 'Montserrat', 'Helvetica', sans-serif;}
 ul {list-style-type: none; padding: 0;}
